--- a/ex001/index.html
+++ b/ex001/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
+    <style>
+        body{
+            background-color: rgb(81, 81, 151);
+            color: white;
+            font: normal 200 1em verdana;
+        }
+        h1{
+            color: rgb(121, 121, 56);
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Hello, World!!</h1>
+    <p>(Só para me livrar!!)</p>
+    <script>
+        window.alert('Hello, World!!')
+        window.confirm('Está gostando de JS?')
+        window.prompt('Qual é seu nome?')
+    </script>
 </body>
 </html>
