--- a/ex001/index.html
+++ b/ex001/index.html
@@ -21,7 +21,7 @@
     <script>
         window.alert('Hello, World!!')
         window.confirm('Está gostando de JS?')
-        window.prompt('Qual é seu nome?')
+        window.prompt('qual o seu nome?')
     </script>
 </body>
 </html>
