--- a/ex002/index.html
+++ b/ex002/index.html
@@ -6,7 +6,7 @@
     <title>JavaScript</title>
     <style>
         body{
-            background-color: rgb(81, 81, 151);
+            background-color: rgb(81, 81, 151); /* Comentário em CSS */
             color: white;
             font: normal 200 1em verdana;
         }
@@ -16,12 +16,11 @@
     </style>
 </head>
 <body>
-    <h1>Hello, World!!</h1>
+    <h1>Hello, World!!</h1> <!-- Comentário em HTML-->
     <p>(Só para me livrar!!)</p>
     <script>
-        window.alert('Hello, World!!')
-        window.confirm('Está gostando de JS?')
-        window.prompt('qual o seu nome?')
+        var nome = window.prompt('qual o seu nome?') // Comentário em JavaScript
+        window.alert('Salve, ' + nome)
     </script>
 </body>
 </html>
