--- a/ex003/index.html
+++ b/ex003/index.html
@@ -16,11 +16,14 @@
     </style>
 </head>
 <body>
-    <h1>Hello, World!!</h1> <!-- Comentário em HTML-->
-    <p>(Só para me livrar!!)</p>
+    <h1>olá</h1><!-- Comentário em HTML-->
     <script>
-        var nome = window.prompt('qual o seu nome?') // Comentário em JavaScript
-        window.alert('Salve, ' + nome + '!')
+        var n1 = Number(window.prompt('Digite um número: '))
+        var n2 = Number(window.prompt('Digite outro número: '))
+        var soma = n1 + n2
+        window.alert(soma)
+        // + pode servir para adição.
+        // + pode servir para concatenação.
     </script>
 </body>
 </html>
