--- a/ex003/index.html
+++ b/ex003/index.html
@@ -18,12 +18,10 @@
 <body>
     <h1>olá</h1><!-- Comentário em HTML-->
     <script>
-        var n1 = Number(window.prompt('Digite um número: '))
-        var n2 = Number(window.prompt('Digite outro número: '))
-        var soma = n1 + n2
-        window.alert(soma)
-        // + pode servir para adição.
-        // + pode servir para concatenação.
+        var n1 = Number(prompt('Me fale um Número: '))
+        var n2 = Number(prompt('Me fale outro número: '))
+        var soma = n1 + n2 // Variável com a função de somar
+        window.alert(`A soma dos Dois números é ${soma}`)
     </script>
 </body>
 </html>
