--- a/ex003/index.html
+++ b/ex003/index.html
@@ -21,7 +21,7 @@
         var n1 = Number(prompt('Me fale um Número: '))
         var n2 = Number(prompt('Me fale outro número: '))
         var soma = n1 + n2 // Variável com a função de somar
-        window.alert(`A soma dos Dois números é ${soma}`)
+        window.alert(`A soma de ${n1} com ${n2} é ${soma}`)
     </script>
 </body>
 </html>
