--- a/ex004/index.html
+++ b/ex004/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
+    <style>
+        body{
+            font: normal 20pt arial;
+        }
+    </style>
 </head>
 <body>
-    
+
+    <script>
+        var nome = String(window.prompt('Digite seu nome: '))
+        document.write(`Olá <strong> ${nome} </strong>, Seu nome tem ${nome.length} letras <br/>`)
+        document.write(`O seu nome em Maiúsculas é: ${nome.toUpperCase()} <br/>`)
+        document.write(`O seu nome em Minúsculas é ${nome.toLowerCase()}`)
+    </script>
 </body>
 </html>
